Finish controller and update Swagger
